--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,28 @@
             "OlegDemkiv\\CoinMarketCapClient\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "OlegDemkiv\\CoinMarketCapClient\\Tests\\": "tests/"
+        }
+    },
     "minimum-stability": "stable",
     "require": {
         "php": ">=8.0",
         "php-http/discovery": "^1.18",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.17",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9"
+    },
+    "scripts": {
+        "check-cs": "vendor/bin/php-cs-fixer fix --allow-risky=yes --dry-run --diff",
+        "fix-cs": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "static": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/phpunit tests"
     },
     "config": {
         "allow-plugins": {
